[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ob-dump-reader"
authors = [{ name = "o-murphy" }]
description = "Minimal ObjectBox LMDB reader toolkit"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["objectbox", "lmdb", "flatbuffers"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["flatbuffers>=25.12.19", "lmdb>=2.2.1"]
dynamic = ["version"]

[project.scripts]
ob-dump-reader = "ob_dump_reader.__main__:main"

[project.urls]
"Homepage" = "https://github.com/o-murphy/ob-dump"
"Bug Reports" = "https://github.com/o-murphy/ob-dump/issues"
"Source" = "https://github.com/o-murphy/ob-dump"
"Changelog" = "https://github.com/o-murphy/ob-dump/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ob_dump_reader*"]

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0.dev0"

[project.optional-dependencies]
orjson = ['orjson==3.11.9']

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = [
    ".git",
    "__pypackages__",
    "*.egg-info",
    ".ruff_cache",
    "venv",
    ".venv",
]

[dependency-groups]
dev = [
    "orjson>=3.11.8",
    "pytest>=9.0.3",
    "ruff>=0.12.11",
]
